Fix responsive layout on body overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@
 }
 
 body {
+    overflow: hidden;
     background: -webkit-linear-gradient(270deg,rgba(76,157,206,1.00) 0%,rgba(255,255,255,0.00) 51.81%,rgba(0,0,0,0.00) 100%) !important;
     background: -moz-linear-gradient(270deg,rgba(76,157,206,1.00) 0%,rgba(255,255,255,0.00) 51.81%,rgba(0,0,0,0.00) 100%) !important;
     background: -o-linear-gradient(270deg,rgba(76,157,206,1.00) 0%,rgba(255,255,255,0.00) 51.81%,rgba(0,0,0,0.00) 100%) !important;
@@ -139,6 +140,11 @@ header #language-switcher {
     right: 0;
     top: 0;
 
+}
+header #language-switcher .dropdown-menu{
+    min-width: 0;
+    max-width: 100%;
+    width: 100%;
 }
 nav#top-nav {
     background: #fff;
